--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,4 +18,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.059" />
 
+    <Button
+        android:id="@+id/btnMovie"
+        android:layout_width="338dp"
+        android:layout_height="55dp"
+        android:text="Enjoy a Movie!"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRecipe" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
